upgrading the skill info with years of expirience

--- a/index.html
+++ b/index.html
@@ -118,32 +118,32 @@
     <section class="mx-auto my-5">
         <h2 id="skills" class="h2 text-center">SKILLS</h2>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left skills-inc">JavaScript Front-End Development (5+ years)</h4>
-            <span>(Including: YUP and Joi Validations, Jest, Material-UI, Bootstrap, J-Query and etc.)</span>
+            <h4 class="h4 text-left skills-inc">JavaScript Front-End Development</h4>
+            <span id="italic">(5+ years, including: YUP and Joi Validations, Jest, Material-UI, Bootstrap, J-Query and etc.)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left skills-inc">React-js (5+ years)</h4>
-            <span class="italic-text">(Including: react, react-hook-form, react-dom, react-router-dom, react-redux, jwt and etc.)</span>
+            <h4 class="h4 text-left skills-inc">React-js</h4>
+            <span id="italic">(5+ years, including: react, react-hook-form, react-dom, react-router-dom, react-redux, jwt and etc.)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left skills-inc"> Redux (5+ years)</h4>
-            <span>(Including: redux, redux-thunk and etc.)</span>
+            <h4 class="h4 text-left skills-inc"> Redux</h4>
+            <span id="italic">(5+ years, including: redux, redux-thunk and etc.)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left skills-inc">Webpack (5+ years)</h4>
-            <span>(Including: webpack, webpack-cli, webpack-dev-server, webpack-bundle-analyzer, babel and ect.)</span>
+            <h4 class="h4 text-left skills-inc">Webpack</h4>
+            <span id="italic">(5+ years, including: webpack, webpack-cli, webpack-dev-server, webpack-bundle-analyzer, babel and ect.)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
@@ -151,7 +151,8 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                JavaScript OOP ES6 (5+ years)
+                JavaScript OOP ES6
+                <span id="italic">(5+ years)</span>
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -160,7 +161,8 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                Typescript (1+ year)
+                Typescript
+                <span id="italic">(1+ years)</span>
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -169,7 +171,8 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                HTML-5 (5+ years)
+                HTML-5
+                <span id="italic">(5+ years)</span>
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -178,7 +181,8 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                CSS-3 (5+ years)
+                CSS-3
+                <span id="italic">(5+ years)</span>
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
@@ -187,7 +191,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">Node-js (5+ years)</h4>
-            <span>(Including: Express.js Hapi.js, Axios, Restful API, CORS, jwt and etc.)</span>
+            <span id="italic">(5+ years, including: Express.js Hapi.js, Axios, Restful API, CORS, jwt and etc.)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
@@ -195,7 +199,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">Unit testing (2+ years)</h4>
-            <span>(Including: Mocha, Jest)</span>
+            <span id="italic">(5+ years, including: Mocha, Jest)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
@@ -203,7 +207,8 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                Database T-SQL (2+ years)
+                Database T-SQL
+                <span id="italic">(3+ years)</span>
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-secondary" role="progressbar"
@@ -212,7 +217,8 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                Database Mongo-DB (0.5 years)
+                Database Mongo-DB
+                <span id="italic">(0.5 year)</span>
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-secondary" role="progressbar"
@@ -221,7 +227,8 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                Git-flow (5+ years)
+                Git-flow
+                <span id="italic">(5+ years)</span>
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"
@@ -230,7 +237,8 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                Agile and Waterfall methodologies (5+ years)
+                Agile and Waterfall methodologies
+                <span id="italic">(5+ years)</span>
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"
