--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 <header class="header-menu">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav id="bold" class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="#">Nedelcho</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
                 aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
