--- a/index.html
+++ b/index.html
@@ -150,9 +150,7 @@
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">
-                JavaScript OOP ES6
-            </h4>
+            <h4 class="h4 text-left">JavaScript OOP ES6</h4>
             <span id="italic">(5+ years)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -160,9 +158,7 @@
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">
-                Typescript
-            </h4>
+            <h4 class="h4 text-left">Typescript</h4>
             <span id="italic">(1+ years)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -170,9 +166,7 @@
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">
-                HTML-5
-            </h4>
+            <h4 class="h4 text-left">HTML-5</h4>
             <span id="italic">(5+ years)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -180,9 +174,7 @@
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">
-                CSS-3
-            </h4>
+            <h4 class="h4 text-left">CSS-3</h4>
             <span id="italic">(5+ years)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
@@ -198,17 +190,15 @@
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left skills-inc">Unit testing (2+ years)</h4>
-            <span id="italic">(5+ years, including: Mocha, Jest)</span>
+            <h4 class="h4 text-left skills-inc">Unit testing</h4>
+            <span id="italic">((2+ years), including: Mocha, Jest)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">
-                Database T-SQL
-            </h4>
+            <h4 class="h4 text-left">Database T-SQL</h4>
             <span id="italic">(3+ years)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-secondary" role="progressbar"
@@ -216,9 +206,7 @@
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">
-                Database Mongo-DB
-            </h4>
+            <h4 class="h4 text-left">Database Mongo-DB</h4>
             <span id="italic">(0.5 year)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-secondary" role="progressbar"
@@ -226,9 +214,7 @@
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">
-                Git-flow
-            </h4>
+            <h4 class="h4 text-left">Git-flow</h4>
             <span id="italic">(5+ years)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"
@@ -236,9 +222,7 @@
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">
-                Agile and Waterfall methodologies
-            </h4>
+            <h4 class="h4 text-left">Agile and Waterfall methodologies</h4>
             <span id="italic">(5+ years)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"
@@ -246,9 +230,7 @@
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">
-                English level - B2
-            </h4>
+            <h4 class="h4 text-left">English level - B2</h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
