--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">JavaScript OOP ES6</h4>
+            <h4 class="h4 text-left skills-inc">JavaScript OOP ES6</h4>
             <span id="italic">(5+ years)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -158,7 +158,7 @@
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">Typescript</h4>
+            <h4 class="h4 text-left skills-inc">Typescript</h4>
             <span id="italic">(1+ years)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -166,7 +166,7 @@
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">HTML-5</h4>
+            <h4 class="h4 text-left skills-inc">HTML-5</h4>
             <span id="italic">(5+ years)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -174,7 +174,7 @@
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">CSS-3</h4>
+            <h4 class="h4 text-left skills-inc">CSS-3</h4>
             <span id="italic">(5+ years)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
@@ -198,7 +198,7 @@
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">Database T-SQL</h4>
+            <h4 class="h4 text-left skills-inc">Database T-SQL</h4>
             <span id="italic">(3+ years)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-secondary" role="progressbar"
@@ -206,7 +206,7 @@
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">Database Mongo-DB</h4>
+            <h4 class="h4 text-left skills-inc">Database Mongo-DB</h4>
             <span id="italic">(0.5 year)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-secondary" role="progressbar"
@@ -214,7 +214,7 @@
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">Git-flow</h4>
+            <h4 class="h4 text-left skills-inc">Git-flow</h4>
             <span id="italic">(5+ years)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"
@@ -222,7 +222,7 @@
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">Agile and Waterfall methodologies</h4>
+            <h4 class="h4 text-left skills-inc">Agile and Waterfall methodologies</h4>
             <span id="italic">(5+ years)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"
@@ -230,7 +230,7 @@
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">English level - B2</h4>
+            <h4 class="h4 text-left skills-inc">English level - B2</h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
