adding new profile picture

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             Nedelcho Karageorgiev
         </h1>
         <p class="text-success h5">
-            Senior JavaScript Full-Stack Developer / TDM / Team Lead
+            Software Developer - JavaScript Full-Stack Developer / TDM / Team Lead
         </p>
         <hr>
         <p class="p-0 m-0"><b class="text-primary">Contact number:</b> +359877012349</p>
