improving the entry description

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         <p><b class="text-primary">Contact E-mail:</b> nedelcho.karageorgiev@gmail.com</p>
         <p>
             Experienced software developer, proficient in FE and BE development of web based applications. A real team player,
-            that got used to bring the things to an end. Almost of five years experience focused on web development as well as communication with clients.
-            I am passionate about producing a well structured, readable and without any bugs code. The need of learning new skills and technology,
-            always makes me to be keen on about studying new technologies or trends. I have programming skills, as well as a sense for customer focus and team collaborations.
+            that got used to bring the things to an end. Five years of professional experience, focused on web development as well as communication with clients.
+            I am passionate about producing a well structured, readable and without any bugs code. The need of learning new skills and keeping up with the trends,
+            always makes me keen on about develop myself further. I have programming skills, as well as a sense for customer focus and team collaborations.
             Currently, most of my job is split between leading a small team of developers, working as TDM and being a developer in the same time.
         </p>
     </section>
