--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">React-js</h4>
-            <span id="italic">(5+ years, including: react, react-hook-form, react-dom, react-router-dom, react-redux, jwt and etc.)</span>
+            <span id="italic">(5+ years, including: react, react-hook-form, react-dom, react-router-dom, jwt and etc.)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left skills-inc"> Redux</h4>
-            <span id="italic">(5+ years, including: redux, redux-thunk and etc.)</span>
+            <h4 class="h4 text-left skills-inc">Redux</h4>
+            <span id="italic">(5+ years, including: redux, react-redux, redux-toolkit, redux-toolkit, redux-toolkit-query and etc.)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
