--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">Node-js (5+ years)</h4>
-            <span id="italic">(5+ years, including: Express.js Hapi.js, Axios, Restful API, CORS, jwt and etc.)</span>
+            <span id="italic">(5+ years, including: Express.js Hapi.js, Swagger, Axios, Restful API, CORS, jwt and etc.)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
