adding swagger to the nodejs info

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </p>
         <hr>
         <p class="p-0 m-0"><b class="text-primary">Contact E-mail:</b> nedelcho.karageorgiev@gmail.com</p>
-        <!-- <p class="p-0 m-0"><b class="text-primary">CV web page:</b><a href="https://nikiqta.github.io"> Nedelcho Dimitrov Karageorgiev</a></p> -->
+        <p class="p-0 m-0"><b class="text-primary">CV web page:</b><a href="https://nikiqta.github.io"> Nedelcho Dimitrov Karageorgiev</a></p>
         <p><b class="text-primary">Contact number:</b> +359877012349</p>
         <p>
             Experienced software developer, proficient in FE and BE development of web based applications. A real team player,
@@ -160,7 +160,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">Typescript</h4>
-            <span id="italic">(1+ years)</span>
+            <span id="italic"></span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 40%"></div>
@@ -184,7 +184,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">Node-js (5+ years)</h4>
-            <span id="italic">(5+ years, including: Express.js Hapi.js, Swagger, Axios, Restful API, CORS, jwt and etc.)</span>
+            <span id="italic">(5+ years, including: Express.js Hapi.js, Swagger, Axios, Restful API, CORS, Swagger, jwt and etc.)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
