--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">Typescript</h4>
-            <span id="italic"></span>
+            <span id="italic">(0.5 & learning in process...)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 40%"></div>
