--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
         </p>
         <hr>
         <p class="p-0 m-0"><b class="text-primary">Contact E-mail:</b> nedelcho.karageorgiev@gmail.com</p>
-        <!-- <p class="p-0 m-0"><b class="text-primary">CV web page:</b><a href="https://nikiqta.github.io"> Nedelcho Dimitrov Karageorgiev</a></p> -->
+        <p class="p-0 m-0"><b class="text-primary">Linked In:</b><a href=https://www.linkedin.com/in/nedelcho-karageorgiev-b6691a1b1/"> Nedelcho Dimitrov Karageorgiev</a></p
+        <p class="p-0 m-0"><b class="text-primary">CV web page:</b><a href="https://nikiqta.github.io"> Nedelcho Dimitrov Karageorgiev</a></p>
         <p><b class="text-primary">Contact number:</b> +359877012349</p>
         <p>
             Experienced software developer, proficient in FE and BE development of web based applications. A real team player,
