removing tdm role

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             Nedelcho Karageorgiev
         </h1>
         <p class="text-success h5">
-            Software Developer - JavaScript Full-Stack Developer / TDM / Team Lead
+            Software Developer - JavaScript Full-Stack Developer / Team Lead
         </p>
         <hr>
         <p class="p-0 m-0"><b class="text-primary">Contact E-mail:</b> nedelcho.karageorgiev@gmail.com</p>
