feat: adding typescript certificate

--- a/index.html
+++ b/index.html
@@ -292,10 +292,12 @@
                  src="certificates/expressJS.jpg" alt="expressJS"/>
             <img data-toggle="modal" data-target="#jsReact" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
                  src="certificates/reactJS.jpg" alt="reactJS"/>
-        </div>
-        <div class="container col-12 w-100 m-auto text-center">
             <img data-toggle="modal" data-target="#jsExpress" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
                  src="certificates/expressJS.jpg" alt="expressJS"/>
+            <img data-toggle="modal" data-target="#typescript" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
+                 src="certificates/Typescript.jpg" alt="typescript"/>
+        </div>
+        <div class="container col-12 w-100 m-auto text-center">
             <img data-toggle="modal" data-target="#ielts" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
                  src="certificates/IELTS.jpg" alt="ielts"/>
         </div>
@@ -360,6 +362,12 @@
                 <img class="h-50 w-100" src="certificates/reactJS.jpg"/>
             </div>
         </div>
+        <div class="modal fade" id="typescript" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog text-center">
+            <img class="h-50 w-75" src="certificates/Typescript.jpg"/>
+        </div>
+    </div>
         <div class="modal fade" id="ielts" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog text-center">
