chore: adding diploma for JS Web Development

--- a/index.html
+++ b/index.html
@@ -300,6 +300,8 @@
         <div class="container col-12 w-100 m-auto text-center">
             <img data-toggle="modal" data-target="#ielts" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
                  src="certificates/IELTS.jpg" alt="ielts"/>
+            <img data-toggle="modal" data-target="#diplomaJsWeb" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
+                 src="certificates/Diploma-NDK.png" alt="ielts"/>
         </div>
 
         <div class="modal fade" id="prBasic" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -373,6 +375,11 @@
         <div class="modal-dialog text-center">
             <img class="h-50 w-75" src="certificates/IELTS.jpg"/>
         </div>
+    </div>
+    <div class="modal fade" id="diplomaJsWeb" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog text-center">
+        <img class="h-50 w-75" src="certificates/Diploma-NDK.png"/>
     </div>
     </section>
 </main>
