chore: updating CV info to up to date

--- a/index.html
+++ b/index.html
@@ -72,44 +72,85 @@
         <hr>
         <p class="p-0 m-0"><b class="text-primary">Contact E-mail:</b> nedelcho.karageorgiev@gmail.com</p>
         <!-- <p class="p-0 m-0"><b class="text-primary">CV web page:</b><a href="https://nikiqta.github.io"> Nedelcho Dimitrov Karageorgiev</a></p> -->
-        <p class="p-0 m-0"><b class="text-primary">Linked In:</b><a href=https://www.linkedin.com/in/nedelcho-karageorgiev-b6691a1b1/" rel="noopener noreferrer" target="_blank"> Nedelcho Dimitrov Karageorgiev</a></p
+        <p class="p-0 m-0"><b class="text-primary">Linked In:</b><a href="https://www.linkedin.com/in/nedelcho-karageorgiev-b6691a1b1/" rel="noopener noreferrer" target="_blank"> Nedelcho Dimitrov Karageorgiev</a></p
         <p><b class="text-primary">Contact number:</b> +359877012349</p>
         <p>
             Experienced software developer, proficient in FE and BE development of web based applications. A real team player,
-            that got used to bring the things to an end. Five years of professional experience, focused on web development as well as communication with clients.
+            that got used to bring the things to an end. Seven years of professional experience, focused on web development as well as communication with clients.
             I am passionate about producing a well structured, readable and without any bugs code. The need of learning new skills and keeping up with the trends,
             always makes me keen on about develop myself further. I have programming skills, as well as a sense for customer focus and team collaborations.
-            Currently, most of my job is split between leading a small team of developers, working as TDM and being a developer in the same time.
         </p>
     </section>
     <!--Experience-->
-    <section class="m-auto my-5">
+    <section class="m-auto">
         <h2 id="experience" class="h2 text-center mb-3 mt-3">EXPERIENCE</h2>
-        <div class="container col-12 m-auto">
-            <div class="container m-auto col-10 row">
-                <div class="card text-black-50 border-success bg-white p-0 mx-auto mb-2" style="max-width:69rem;">
-                    <div class="card-header h4 text-center">11/2018 to Current</div>
-                    <div class="card-body">
-                        <h4 class="card-title">Software Group BG AD</h4>
-                        <p class="card-text">Software Group is a global technology company specialized in digitalization and integration solutions for financial service providers.</p>
-                        <div class="container col-12 m-auto">
-                            <ul class="text-left">
-                                <li class="text-left">Developed insurance applications for clients as Generali, Euroins, and Atlantique Assurance</li>
-                                <li class="text-left">Developed, maintained and enhanced web services and technology platforms</li>
-                                <li class="text-left">Front and backend development with Javascript and Typescript</li>
-                                <li class="text-left">Javascript frameworks like: React, jQuery, Express.js</li>
-                                <li class="text-left">Building and consuming RESTful web APIs</li>
-                                <li class="text-left">Identity management and Directories</li>
-                                <li class="text-left">Work well in fast paced and Agile or Waterfall development environments and drive continuous improvements</li>
-                                <li class="text-left">Working knowledge of front end optimization and performance techniques</li>
-                                <li class="text-left">Expertise working as part of a team developing and delivering web-scale applications</li>
-                                <li class="text-left">Participated in introduction of new features for websites</li>
-                                <li class="text-left">Suggested and implemented new features for existing apps</li>
-                                <li class="text-left">Develop well structured, modular and clean JavaScript</li>
-                                <li class="text-left">Analyze, optimize, and improve the code base</li>
-                                <li class="text-left">Familiar with source control systems such as git</li>
-                                <li class="text-left">Facilitate exchange of ideas between developers</li>
-                            </ul>
+        <div class="d-flex">
+            <div class="container col-6 m-auto">
+                <div class="container m-auto col-12 row">
+                    <div class="card text-black-50 border-success bg-white p-0 mx-auto mb-2" style="max-width:69rem;">
+                        <div class="card-header h4 text-center">11/2018 - 01/2024</div>
+                        <div class="card-body">
+                            <h4 class="card-title">Software Group BG AD</h4>
+                            <h6 class="card-text">Software Group is a global technology company specialized in digitalization and integration solutions for financial service providers.</h6>
+                            <p class="card-title">Positions:</p>
+                            <div class="container col-12 m-auto">
+                                <ul class="text-left m-1">
+                                    <ol class="text-left">Junior javascript full-stack developer - 2018-2019</ol>
+                                    <ol class="text-left">Middle javascript full-stack developer - 2019-2021</ol>
+                                    <ol class="text-left">Senior javascript full-stack developer - 2021-2023</ol>
+                                    <ol class="text-left">Team Lead / TDM - 2023-2024</ol>
+                                </ul>
+                            </div>
+                            <p class="card-title">Experience:</p>
+                            <div class="container col-12 m-auto">
+                                <ul class="text-left">
+                                    <li class="text-left">Developed insurance applications for clients as Generali, Euroins, and Atlantique Assurance.</li>
+                                    <li class="text-left">Developed, maintained and enhanced web services and technology platforms.</li>
+                                    <li class="text-left">Front and backend development with Javascript and Typescript.</li>
+                                    <li class="text-left">Javascript frameworks like: React, jQuery, Express.js.</li>
+                                    <li class="text-left">Building and consuming RESTful web APIs.</li>
+                                    <li class="text-left">Identity management and Directories.</li>
+                                    <li class="text-left">Work well in fast paced and Agile or Waterfall development environments and drive continuous improvements.</li>
+                                    <li class="text-left">Working knowledge of front end optimization and performance techniques.</li>
+                                    <li class="text-left">Expertise working as part of a team developing and delivering web-scale applications.</li>
+                                    <li class="text-left">Participated in introduction of new features for websites.</li>
+                                    <li class="text-left">Suggested and implemented new features for existing apps.</li>
+                                    <li class="text-left">Develop well structured, modular and clean JavaScript.</li>
+                                    <li class="text-left">Analyze, optimize, and improve the code base.</li>
+  
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container col-6">
+                <div class="container m-auto col-12 row">
+                    <div class="card text-black-50 border-success bg-white p-0 mx-auto mb-2" style="max-width:69rem;">
+                        <div class="card-header h4 text-center">11/2024 to current</div>
+                        <div class="card-body">
+                            <h4 class="card-title">TINQIN AD</h4>
+                            <h6 class="card-text">TINQIN is a company focused on developing and delivering a wide range of innovative solutions mainly for the insurance industry.</h6>
+                            <p class="card-title">Positions:</p>
+                            <div class="container col-12 m-auto">
+                                <ul class="text-left m-1">
+                                    <ol class="text-left">FE developer with React.js - 2024 till current</ol>
+                                </ul>
+                            </div>
+                            <p class="card-title">Experience:</p>
+                            <div class="container col-12 m-auto">
+                                <ul class="text-left">
+                                    <li class="text-left">Developed insurance applications for clients as Be-ys trusted solutions.</li>
+                                    <li class="text-left">Developed, maintained and enhanced web services and technology platforms</li>
+                                    <li class="text-left">Front-end development with Javascript and Typescript</li>
+                                    <li class="text-left">Work well in fast paced and Agile or Waterfall development environments and drive continuous improvements</li>
+                                    <li class="text-left">Working knowledge of front end optimization and performance techniques</li>
+                                    <li class="text-left">Expertise working as part of a team developing and delivering web-scale applications</li>
+                                    <li class="text-left">Develop well structured, modular and clean JavaScript</li>
+                                    <li class="text-left">Analyze, optimize, and improve the code base</li>
+    
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -121,7 +162,7 @@
         <h2 id="skills" class="h2 text-center">SKILLS</h2>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">JavaScript Front-End Development</h4>
-            <span id="italic">(5+ years, including: YUP and Joi Validations, Jest, Material-UI, Bootstrap, J-Query and etc.)</span>
+            <span id="italic">(7+ years, including: YUP and Joi Validations, Jest, Material-UI, Bootstrap, J-Query and etc.)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
@@ -129,7 +170,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">React-js</h4>
-            <span id="italic">(5+ years, including: react, react-hook-form, react-dom, react-router-dom, jwt and etc.)</span>
+            <span id="italic">(6+ years, including: react, react-hook-form, react-dom, react-router-dom, jwt and etc.)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
@@ -137,7 +178,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">Redux</h4>
-            <span id="italic">(5+ years, including: redux, react-redux, reduxjs/toolkit, reduxjs/toolkit/query and etc.)</span>
+            <span id="italic">(6+ years, including: redux, react-redux, reduxjs/toolkit, reduxjs/toolkit/query and etc.)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
@@ -145,7 +186,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">Webpack</h4>
-            <span id="italic">(5+ years, including: webpack, webpack-cli, webpack-dev-server, webpack-bundle-analyzer, babel and ect.)</span>
+            <span id="italic">(6+ years, including: webpack, webpack-cli, webpack-dev-server, webpack-bundle-analyzer, babel and ect.)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
@@ -161,15 +202,15 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">Typescript</h4>
-            <span id="italic">(0.5 & learning in process...)</span>
+            <span id="italic">(2+ years)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
-                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 40%"></div>
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">HTML-5</h4>
-            <span id="italic">(5+ years)</span>
+            <span id="italic">(7+ years)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
@@ -177,7 +218,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">CSS-3</h4>
-            <span id="italic">(5+ years)</span>
+            <span id="italic">(7+ years)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
@@ -217,7 +258,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">Git-flow</h4>
-            <span id="italic">(5+ years)</span>
+            <span id="italic">(7+ years)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
@@ -225,7 +266,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">Agile and Waterfall methodologies</h4>
-            <span id="italic">(5+ years)</span>
+            <span id="italic">(6+ years)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
