--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">Unit testing</h4>
-            <span id="italic">(2+ years), including: Mocha, Jest)</span>
+            <span id="italic">(2+ years), including: Mocha, Jest</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
