--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="d-flex">
             <div class="container col-6 m-auto">
                 <div class="container m-auto col-12 row">
-                    <div class="card text-black-50 border-success bg-white p-0 mx-auto mb-2" style="max-width:69rem;">
+                    <div class="card text-black-50 border-success bg-white p-0 mx-auto mb-2">
                         <div class="card-header h4 text-center">11/2018 - 01/2024</div>
                         <div class="card-body">
                             <h4 class="card-title">Software Group BG AD</h4>
@@ -126,7 +126,7 @@
             </div>
             <div class="container col-6">
                 <div class="container m-auto col-12 row">
-                    <div class="card text-black-50 border-success bg-white p-0 mx-auto mb-2" style="max-width:69rem;">
+                    <div class="card text-black-50 border-success bg-white p-0 mx-auto mb-2">
                         <div class="card-header h4 text-center">11/2024 to current</div>
                         <div class="card-body">
                             <h4 class="card-title">TINQIN AD</h4>
